--- a/templates/modals/networkLogDialog.html
+++ b/templates/modals/networkLogDialog.html
@@ -10,15 +10,17 @@
         <ul class="top-filter-bar">
             <li>
                 <h5>Network</h5>
-                <div class="checkbox">
-                    <input class="radio-custom network_radio" type="radio" id="networks"  name="networkList" ng-model="selectedNetwork" value="" >
-                        <span class="v-align-middle">{{network_name}}</span></label>
-                </div>
+                <div class="checkbox-radio">
+                    <input type="radio" class="radio-custom-checkbox all_check" type="radio" id="networks"  name="networkList" ng-model="selectedNetwork" value="" >
+                    <label class="radio-custom-checkbox-label">
+                        {{network_name}}
+                    </label>
+                 </div>                
             </li>
             <li>
-                <button id="nl_active_network" class="btn networkSelectBtn" ng-class="!showAllNetworks ? 'btn-disabled' : 'btn-blue'" ng-disabled="!showAllNetworks ? 'disabled' : '' " type="button" ng-click="getNetworksWithAllFilters(); showAllNetworks = false">Filtered Results</button>
-                <button id="nl_all_network" class="btn networkSelectBtn" ng-class="showAllNetworks ? 'btn-disabled' : 'btn-blue'" type="button" ng-click="getAllActiveInactiveNetworks();  showAllNetworks = true">Show All Networks</button>
-                <button id="network_excel" class="btn networkSelectBtn excel-download" type="button" ng-click="networksExcel();" ng-class="showAllNetworks || (!showAllNetworks && selectedNetwork != 'All') ? 'btn-disabled' : 'btn-blue'" ng-disabled="(!showAllNetworks && selectedNetwork != 'All') ? 'disabled' : '' "><img src="./assets/images/download.svg" alt="Loading icon" > Excel</button>
+                <button id="nl_active_network" class=" btn networkSelectBtn btn-disabled" ng-class="!showAllNetworks ? 'btn-disabled' : 'btn-blue'" ng-disabled="!showAllNetworks ? 'disabled' : '' " type="button" ng-click="getNetworksWithAllFilters(); showAllNetworks = false">Filtered Results</button>
+                <button id="nl_all_network" class="btn btn-blue networkSelectBtn" ng-class="showAllNetworks ? 'btn-disabled' : 'btn-blue'" type="button" ng-click="getAllActiveInactiveNetworks();  showAllNetworks = true">Show All Networks</button>
+                <button id="network_excel" class="btn btn-blue excel-download btn-disabled" type="button" ng-click="networksExcel();" ng-class="showAllNetworks || (!showAllNetworks && selectedNetwork != 'All') ? 'btn-disabled' : 'btn-blue'" ng-disabled="(!showAllNetworks && selectedNetwork != 'All') ? 'disabled' : '' "><img src="./assets/images/download.svg" alt="Loading icon" > Excel</button>
                 <div id="excel_loader_networks" style="display:none" class="hide m-2"><img src="./assets/images/excel_spinner.gif" alt="Loading icon"></div>
                
                 <div class="search-input">
