NO records found

--- a/templates/modals/FilterDialog.html
+++ b/templates/modals/FilterDialog.html
@@ -25,6 +25,9 @@
         </div>
         <span id="duplicate-filter-error" class="duplicate-filter-error" ng-show="filter_error">Filter name already exists.</span>
         <!-- <div class="grid-content" id='filter_list_network'></div> -->
-        <div id="filter_list_network" ui-grid="gridOptions" ui-grid-selection class="grid grid-content"></div>
+        <div id="filter_list_network" ui-grid="gridOptions" ui-grid-selection class="grid grid-content">
+            <div class="watermark" ng-show="!gridOptions.data.length && !loading">No Records Founds</div>
+            <div class="watermark"  ng-show="loading">loading ...</div>
+        </div>
     </div>
 </div>
