Track cateory done.

--- a/templates/primary_filter.html
+++ b/templates/primary_filter.html
@@ -56,7 +56,7 @@
                     <span ng-if="!$last">, </span>
                 </span>
             </div>
-            <span ng-if="creative_type == 'short'" class="text-disabled" id="classfication_filter">{{creative_type}}
+            <span ng-if="creative_type == 'short'" class="text-disabled" id="classfication_filter">
              {{duration_display_text}}
             </span>
         </div>
