Airing detail page different routing

--- a/templates/airingDetail.html
+++ b/templates/airingDetail.html
@@ -1,5 +1,5 @@
-<div ng-controller="airingsDetailController" ng-if="page_call=='airings_detail'">
-    <button ng-click="backToRankingpage();">Back</button>
+<div>
+    <button history-backward>Back</button>
     <div class="" ng-include="'templates/displayHeader.html'"></div>
     <div class="airings-filter-container airings-filter ">
         <div class="network-filters">
