--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -66,7 +66,7 @@
                 <ul>
                     <li>
                         Network
-                        <div class="open-filter-popup custom-tooltip" ng-click="openNetworkLogModal();">{{networkDisplayName ? networkDisplayName : 'All'}} <i class="fa fa-caret-down fa-lg"></i>
+                        <div class="open-filter-popup custom-tooltip" ng-click="openModalDialog('network_ranking');">{{networkDisplayName ? networkDisplayName : 'All'}} <i class="fa fa-caret-down fa-lg"></i>
                             <div class="top">
                                 <i></i>
                                 All
@@ -75,19 +75,19 @@
                     </li>
                     <li>
                         New
-                        <span class="open-filter-popup capitalize" ng-click="openNewTypeModal();" >
+                        <span class="open-filter-popup capitalize" ng-click="openModalDialog('new_type');" >
                             {{newCheckBox ? newType : 'All'}} <i class="fa fa-caret-down fa-lg"></i>
                         </span>
                     </li>
                     <li>
                         TFN/URL
-                        <span class="open-filter-popup" ng-click="openRefineModal();">
+                        <span class="open-filter-popup" ng-click="openModalDialog('refine_by');">
                             {{refine_by ? refine_by : 'All'}} <i class="fa fa-caret-down fa-lg"></i>
                         </span>
                     </li>
                     <li ng-show="selectedNetwork != ''">
                         Programs
-                        <span class="open-filter-popup" ng-click="openProgramModal();">
+                        <span class="open-filter-popup" ng-click="openModalDialog('programs');">
                             {{programs_id ? 'Custom' : 'All'}} Programs <i class="fa fa-caret-down fa-lg"></i>
                         </span>
                     </li>
