top header with mobile

--- a/templates/mainMenu.html
+++ b/templates/mainMenu.html
@@ -15,7 +15,7 @@
         <li class="dropdown show whats-new d-none d-xl-flex">
             <a class="dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown"
                 aria-haspopup="true">
-                <img src="assets/images/menuiconblue/menuiconset-6.svg"><label> What's New</label>
+                <img src="assets/images/menuiconblue/menuiconset-6.svg">What's New
                 <div class="notification-new">5</div>
             </a>
             <div class="dropdown-menu common-dropdown" aria-labelledby="dropdownMenuLink">
@@ -94,7 +94,7 @@
         </li>
     </ul>
     <!-- mobile menu -->
-    <div class="right-nav d-md-block" ng-show="showme">
+    <div class="right-nav" ng-show="showme">
         <a class="close-menu" ng-click="showme=false">
             <i data-feather="x"></i>
         </a>
