--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -222,6 +222,7 @@ select::-ms-expand {
 }
 
 /*common classes*/
+
 .d-none {
   display: none;
 }
@@ -398,7 +399,7 @@ input[type="checkbox"].checkbox-custom, input[type="radio"].radio-custom-checkbo
   cursor: pointer;
 }
 
-.checkbox-normal .checkbox-custom:checked+.checkbox-custom-label:before, .checkbox-radio .radio-custom-checkbox:checked+.radio-custom-checkbox-label:before  {
+.checkbox-normal .checkbox-custom:checked+.checkbox-custom-label:before, .checkbox-radio .radio-custom-checkbox:checked+.radio-custom-checkbox-label:before {
   border: 1px solid #9ea6b0;
   content: '\f00c';
   font-family: 'FontAwesome';
@@ -883,7 +884,7 @@ header.sticky-top {
   width: 100%;
 }
 
-.nav-menu .global-search form > div {
+.nav-menu .global-search form>div {
   width: 350px;
   padding: 0px;
   margin: 0 auto;
@@ -892,8 +893,8 @@ header.sticky-top {
 }
 
 .notification-new {
-  width: 16px;
-  height: 16px;
+  width: 13px;
+  height: 13px;
   color: #fff;
   background: red;
   position: absolute;
@@ -902,12 +903,11 @@ header.sticky-top {
   border-radius: 20px;
   text-align: center;
   padding: 3px;
-  font-size: 11px;
-  line-height: 12px;
+  font-size: 10px;
+  line-height: 8px;
 }
 
 .global-search {
-  padding: 0 10px;
   display: flex;
   align-items: center;
   position: relative;
@@ -920,7 +920,7 @@ header.sticky-top {
   border-radius: 22px;
   border: none;
   background-color: #fff;
-  padding: 2px 10px;
+  padding: 1px 10px;
   border: 1px solid #979797;
 }
 
@@ -1172,7 +1172,7 @@ header.sticky-top {
   pointer-events: auto;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid rgba(0,0,0,.2);
+  border: 1px solid rgba(0, 0, 0, .2);
   border-radius: .3rem;
   outline: 0;
 }
@@ -1503,6 +1503,7 @@ header.sticky-top {
 }
 
 /*left menu*/
+
 .left-menu {
   display: flex;
   align-items: center;
@@ -1579,14 +1580,17 @@ header.sticky-top {
 }
 
 /* filter radio */
+
 .radio-circular input[type="radio"] {
   display: none;
 }
+
 .radio-circular input[type="radio"]+label {
   background: #fff;
   padding: 1px 8px 1px 3px;
   margin-right: 4px;
-  margin-bottom: 0;;
+  margin-bottom: 0;
+  ;
   border-radius: 20px;
   display: inline-flex;
   align-items: center;
@@ -1644,22 +1648,27 @@ header.sticky-top {
 }
 
 /* Datepicker */
+
 .datepicker-li {
   padding-left: 6px;
   border-left: 2px solid #999;
 }
-.brand-filter ul.v-align-middle li.datepicker-li input[type="checkbox"] + label {
-  margin-left: 0; 
+
+.brand-filter ul.v-align-middle li.datepicker-li input[type="checkbox"]+label {
+  margin-left: 0;
   margin-right: 1em;
   position: relative;
   cursor: pointer;
 }
+
 .datepicker-li .checkbox-custom-label span {
   font-size: 12px;
 }
-.datepicker-li .checkbox-custom + .checkbox-custom-label:before {
+
+.datepicker-li .checkbox-custom+.checkbox-custom-label:before {
   margin-right: 8px;
 }
+
 #datepickeropen {
   margin-left: 5px;
   font-size: 16px;
@@ -1667,6 +1676,7 @@ header.sticky-top {
 }
 
 /*sidebar*/
+
 .sidebar {
   position: relative;
 }
@@ -1754,7 +1764,7 @@ header.sticky-top {
   color: #fff;
 }
 
-.sidebar .sidebar-sticky label {  
+.sidebar .sidebar-sticky label {
   margin-bottom: 0;
   font-size: 13px;
 }
@@ -1824,6 +1834,7 @@ header.sticky-top {
 }
 
 /*mob right menu*/
+
 .right-nav {
   background: #fff;
   border-bottom: 1px solid #f5f5f5;
@@ -1835,7 +1846,7 @@ header.sticky-top {
   position: fixed;
   z-index: 1;
   top: 90px;
-  right: -100%;
+  right: 0;
   transition: right 0.5s ease-out;
 }
 
@@ -2086,7 +2097,7 @@ header.sticky-top {
   line-height: 15px;
   display: flex;
   align-items: center;
-  margin-right: 50px; 
+  margin-right: 50px;
 }
 
 .network-filter-popup .filter-popup .network-filter-bottom .dpi-newnetwork a span {
@@ -2099,14 +2110,14 @@ header.sticky-top {
 
 .network-filter-popup .filter-popup .new-symbol {
   color: #fff;
-    border-radius: 4px;
-    font-size: 9.5px;
-    text-align: center;
-    font-weight: 600;
-    line-height: 14px;
-    margin-left: 5px;
-    font-style: italic;
-    text-decoration: none;
+  border-radius: 4px;
+  font-size: 9.5px;
+  text-align: center;
+  font-weight: 600;
+  line-height: 14px;
+  margin-left: 5px;
+  font-style: italic;
+  text-decoration: none;
 }
 
 .dpi-symbol {
@@ -2379,6 +2390,7 @@ header.sticky-top {
 .network-page .networklist li {
   max-width: 280px;
 }
+
 .network-page .network-filter ul.scrollbar {
   height: 450px;
 }
@@ -3014,11 +3026,12 @@ header.sticky-top {
 }
 
 /*set alert*/
+
 .set-alert-modal {
   max-width: 600px;
 }
 
-.edit-parent-container .edit-inner-div > label {
+.edit-parent-container .edit-inner-div>label {
   font-size: 14px;
   max-width: 220px;
   width: 100%;
@@ -3204,6 +3217,7 @@ header.sticky-top {
 .user-contact-block .owl-carousel .owl-nav button.disabled {
   color: #ccc;
 }
+
 .welcome-text {
   color: #fff;
   padding-right: 25px;
@@ -3888,16 +3902,19 @@ header.sticky-top {
   position: relative;
   top: -2px;
 }
+
 .user-verified {
   color: #fff;
   background-color: green;
   padding: 6px;
 }
+
 .user-not-verified {
   color: #fff;
   background-color: #d55755;
   padding: 7px;
 }
+
 .user-not-verified-link {
   color: #00beff;
   text-decoration: underline;
@@ -3950,6 +3967,7 @@ header.sticky-top {
 }
 
 /*drop arrow*/
+
 .dropdown-arrow:after {
   content: "";
   border-top: 6px solid;
@@ -3962,8 +3980,8 @@ header.sticky-top {
   margin-left: 8px;
 }
 
-
 /*user admin*/
+
 .super-admin-popup h5 {
   margin-bottom: 15px
 }
@@ -3972,7 +3990,7 @@ header.sticky-top {
   font-size: 12px;
 }
 
-.super-admin-popup li > label {
+.super-admin-popup li>label {
   width: 250px;
   margin-bottom: 0;
 }
@@ -3993,11 +4011,11 @@ header.sticky-top {
   width: 80%;
 }
 
-.super-admin-popup ul li div label{
+.super-admin-popup ul li div label {
   margin-bottom: 0;
 }
 
-.super-admin-popup ul li select, .super-admin-popup ul li input  {
+.super-admin-popup ul li select, .super-admin-popup ul li input {
   width: 100%;
 }
 
@@ -4007,7 +4025,7 @@ header.sticky-top {
   padding: 4px;
 }
 
-.user-grid-filter .help{
+.user-grid-filter .help {
   margin: 0 5px 0 2px;
   width: 16px;
   position: relative;
@@ -4038,7 +4056,7 @@ header.sticky-top {
   height: calc(100vh - 300px);
 }
 
-.user-grid .ui-grid-header-cell .ui-grid-cell-contents .ui-grid-header-cell-label{
+.user-grid .ui-grid-header-cell .ui-grid-cell-contents .ui-grid-header-cell-label {
   color: #202b39;
   font-size: 12px;
   line-height: 20px;
@@ -4055,7 +4073,6 @@ header.sticky-top {
 .user-super-admin .setting-icon .dropdown-menu {
   width: 210px;
 }
-
 
 /*media year*/
 
@@ -4447,13 +4464,9 @@ header.sticky-top {
   overflow-x: hidden;
 }
 
-
 /*mobile responsive*/
 
 @media (max-height: 800px) {
-  .right-nav {
-    top: 77px;
-  }
   .social-icon li a {
     font-size: 12px;
     line-height: 22px;
@@ -4461,13 +4474,40 @@ header.sticky-top {
     height: 22px;
   }
   .nav-menu>li>a {
-    font-size: 12px;
+    font-size: 11px;
   }
   .blog-link {
     font-size: 12px;
   }
   .nav-menu>li:first-child {
-    max-width: 130px;
+    width: 100%;
+    max-width: 120px;
+    background: #202733;
+  }
+  .nav-menu>li:first-child img {
+    width: 98px;
+  }
+  .nav-menu>li a img {
+    width: 26px;
+  }
+  .nav-menu .global-search form>div {
+    width: 300px;
+  }
+  .global-search .search-filter {
+    padding-left: 6px;
+  }
+  .global-search .search-icon {
+    top: 0;
+    width: 22px;
+    margin-right: 6px;
+  }
+  .search-filter input[type="text"] {
+    height: 23px;
+    font-size: 11px;
+    line-height: 11px;
+  }
+  .global-search .search-icon svg {
+    width: 16px;
   }
 }
 
@@ -4496,6 +4536,15 @@ header.sticky-top {
     margin-left: 20px;
     text-align: left;
   }
+  .right-nav {
+    top: 54px;
+  }
+  .nav-menu .global-search form>div {
+    width: 100%;
+  }
+  .global-search {
+    padding: 0 10px;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -4503,7 +4552,7 @@ header.sticky-top {
     font-size: 12px;
     line-height: 12px;
   }
-  .nav-menu .global-search form > div {
+  .nav-menu .global-search form>div {
     width: 100%;
   }
   .log-out {
@@ -4548,7 +4597,6 @@ header.sticky-top {
   .network-filter-popup .filter-popup .filter-in-letters a {
     margin: 1px;
   }
-  
   .network-page .network-filter {
     margin: 0 10px;
   }
@@ -4593,7 +4641,6 @@ header.sticky-top {
     justify-content: center;
     width: 100%;
   }
-  
   .main-filter {
     padding-top: 6px;
     padding-bottom: 6px;
@@ -4724,25 +4771,22 @@ header.sticky-top {
   .report-tab-section .left-menu li:first-child {
     margin-left: 0;
   }
-  
   .right-nav {
     width: 100%;
     z-index: 9;
     overflow-y: scroll;
     overflow-x: hidden;
     padding-bottom: 72px;
+    top: 100px;
   }
-
   .network-filter-popup .filter-popup .network-filter-bottom .dpi-newnetwork {
     margin-bottom: 0;
     flex-flow: wrap;
   }
-
   .network-filter-popup .filter-popup .network-filter-bottom .dpi-newnetwork a {
     margin-bottom: 10px;
     margin-right: 0;
   }
- 
   .filter-popup .network-filter-bottom .btn-grp {
     margin: 10px 0;
     justify-content: center;
@@ -4854,9 +4898,6 @@ header.sticky-top {
   .nav-menu .global-search {
     padding: 10px;
     flex: 1;
-  }
-  .right-nav {
-    top: 70px;
   }
   .network-filter-popup .top-filter-bar li:last-child {
     display: block;
