Ui for login page and grid

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,9 @@
 <section class="section">
       <div class="left-div">
-        <img src="./assets/images/adsphere-login-page-01-min.png"/>
-        <a href="https://www.drmetrix.com/adsphere-awards.html" target="_blank" class="layoutleftsecondlink_holiday"></a>
-        <a href="https://drmetrix.com/blog/2020/03/19/tracking-the-daily-impact-of-coronavirus-on-television-advertising/" target="_blank" class="blog-link">Tracking the Daily Impact of Coronavirus on Television Advertising</a>
-        <a href="https://drmetrix.com/blog/2020/03/19/tracking-the-daily-impact-of-coronavirus-on-television-advertising/" target="_blank" class="link-for-details">Click here for Details <i class="fa fa-hand-o-up" aria-hidden="true"></i></a>
+          <div>
+              <img src="./assets/images/adsphere_login_page-08.png"/>
+            <a href="https://www.youtube.com/watch?v=fbXcQUh_B44&amp;feature=youtu.be" target="_blank"></a>
+          </div>
       </div>
       <div class="right-div">
           <div class="inner-right">
