--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -107,6 +107,6 @@
         </div>
         <!-- <button ng-click="downloadCSV()">Download CSV</button>
          <div ng-click="gridApi.grid.gridMenuScope.toggleMenu()">Menu</div> -->
-        <div id="grid1" ui-grid="gridOptions" ui-grid-exporter ui-grid-expandable ui-grid-selection ui-grid-pagination ui-grid-grouping class="grid"></div>
+        <div id="grid1" ui-grid="gridOptions" ui-grid-exporter ui-grid-expandable ui-grid-selection ui-grid-pagination ui-grid-grouping class="grid" ui-grid-auto-fit-columns ui-grid-resize-columns></div>
     </main>
 </div>
