--- a/templates/expandableRowTemplate.html
+++ b/templates/expandableRowTemplate.html
@@ -1,1 +1,1 @@
-<div ui-grid="row.entity.subGridOptions" ui-grid-exporter ui-grid-expandable ui-grid-selection ui-grid-pagination class="grid" style="height:385px;"></div>
+<div ui-grid="row.entity.subGridOptions" ui-grid-exporter ui-grid-expandable ui-grid-selection ui-grid-pagination ui-grid-auto-fit-columns ui-grid-resize-columns class="grid"></div>
