hide header for some pages.

--- a/templates/userAccount.html
+++ b/templates/userAccount.html
@@ -1,7 +1,7 @@
 <div class="user-addmin-wrapper" ng-init="showUsers();">
     <div class="black-top-menu">
         <nav class="user-menu-icons d-flex justify-content-between align-items-center w-100">
-            <span class="welcome-text">Welcome, {{complete_name}}</span>
+            <span class="welcome-text">Welcome {{admin_user.complete_name}},</span>
             <ul>
                 <li>
                     <button class="btn btn-blue" ng-click="export()"><img class="help"
