--- a/templates/mainMenu.html
+++ b/templates/mainMenu.html
@@ -1,5 +1,5 @@
-<header class="navbar navbar-dark sticky-top bg-dark p-0" ng-show="login_user_id != ''">
-    <ul class="nav-menu">
+<header class="navbar navbar-dark sticky-top bg-dark p-0" ng-controller="NavBarController" ng-hide="state.$current.hideNavbar">
+    <ul class="nav-menu"> 
         <li>
             <a ui-sref="ranking" ui-sref-active="top-menu-active">
                 <img ng-src="./assets/images/adspherelogowhite.svg" alt="drmetrix-logo">
