--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -2,7 +2,7 @@
     <!-- black-top menu -->
     <div class="black-top-menu" ng-init="showTab('brands')" ng-show="headerDisplay == 1">
         <ul class="left-menu">
-            <li>Welcome {{complete_name}},</li>
+            <li>Welcome {{ranking.complete_name}},</li>
             <li ng-class="{'active-alert' : type == 'brands'}">
                 <a ng-click="showTab('brands')">
                     <label for="">Brands</label>
