--- a/templates/modals/saveFilterModal.html
+++ b/templates/modals/saveFilterModal.html
@@ -6,7 +6,7 @@
     </button>
 </div>
 <div class="modal-body">
-    <div class="filter-error-note"><span ng-if="filter_error" ng-class="{{alertClass}}" id="filter_save_error_ranking">{{filter_error}}</span></div>
+    <div class="filter-error-note" ng-class="alertClass"><span ng-if="filter_error" id="filter_save_error_ranking">{{filter_error}}</span></div>
             <div class="mt-2">
                <div class="search-input search-input1 mb-3">
                   <input type="text" placeholder="Filter Name" id="filter_name_ranking" maxlength="200">
