--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -776,39 +776,37 @@ header.sticky-top {
 .nav-menu {
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-between;
-  background-color: #e5e5e5;
-  border-top: 5px solid;
+  background-color: #E5E5E5;
+  border-top: 2px solid;
   width: 100%;
+  justify-content: space-between;
 }
 
 .nav-menu>li {
   text-align: center;
-  border-right: 1px solid #bcbdc1;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-items: center;
-  align-content: center;
   flex: 1 0 auto;
-  cursor: pointer;
+  justify-content: center;
 }
 
 .nav-menu>li>a {
+  display: flex;
+  flex-flow: column;
   position: relative;
-  color: #202b39;
-  font-weight: 700;
-  padding: 0;
+  color: #202B39;
+  font-weight: 500;
+  border-right: 1px solid #BCBDC1;
+  padding: 8px 0 8px;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  align-items: center;
   height: auto;
   font-size: 14px;
-  line-height: 17px;
   cursor: pointer;
-  text-decoration: none;
+  line-height: 15px;
 }
 
 .nav-menu>li>a img {
-  display: block;
-  margin: 0 auto;
-  padding: 0;
   width: 32px;
 }
 
@@ -843,16 +841,16 @@ header.sticky-top {
 }
 
 .nav-menu>li:first-child {
-  border-right: 1px solid #5c5c5f;
-  align-content: space-between;
   width: 100%;
-  max-width: 150px;
-  background: #202733;
+  max-width: 120px;
+  background: #707883;
 }
 
 .nav-menu li:first-child img {
-  width: 128px;
   margin: 0 auto;
+  padding: 5px;
+  width: 100%;
+  height: 60px;
 }
 
 .nav-menu>li>img {
@@ -882,6 +880,7 @@ header.sticky-top {
 
 .nav-menu .global-search form {
   width: 100%;
+  margin: 0 10px;
 }
 
 .nav-menu .global-search form > div {
@@ -893,22 +892,21 @@ header.sticky-top {
 }
 
 .notification-new {
-  width: 16px;
-  height: 16px;
+  font-size: 10px;
+  line-height: 14px;
+  width: 14px;
+  height: 14px;
   color: #fff;
   background: red;
   position: absolute;
-  top: 0;
-  left: 53%;
-  border-radius: 20px;
+  top: 4px;
+  left: 54%;
+  border-radius: 50%;
   text-align: center;
-  padding: 3px;
-  font-size: 11px;
-  line-height: 12px;
 }
 
 .global-search {
-  padding: 0 10px;
+  padding: 0;
   display: flex;
   align-items: center;
   position: relative;
@@ -921,7 +919,8 @@ header.sticky-top {
   border-radius: 22px;
   border: none;
   background-color: #fff;
-  padding: 2px 10px;
+  padding: 0 12px;
+  padding-left: 6px;
   border: 1px solid #979797;
 }
 
@@ -933,6 +932,7 @@ header.sticky-top {
   padding: 0;
   border-radius: 22px;
   font-size: 12px;
+  height: 28px;
 }
 
 .global-search .search-filter input::-webkit-input-placeholder {
@@ -953,31 +953,30 @@ header.sticky-top {
 
 .global-search .search-icon {
   border: none;
-  width: 20px;
-  position: relative;
   margin-right: 8px;
-  height: 20px;
-  top: 3px;
 }
 
 .global-search .search-icon svg {
   color: #999;
   width: 18px;
+  position: relative;
+  top: 2px;  
 }
 
 .nav-menu .right-menu {
   width: 20px;
-  max-width: 70px;
-  display: flex;
+  max-width: 40px;
+  display: none;
   align-items: center;
   justify-content: center;
   border-left: 1px solid #bcbdc1;
-  cursor: pointer;
+  cursor: pointer;  
 }
 
 .nav-menu .right-menu a {
   margin-right: 0;
   border: none;
+  height: 100%;
 }
 
 .search-text-validation-error {
@@ -2891,10 +2890,6 @@ header.sticky-top {
   margin-right: 16px;
 }
 
-.ui-grid .ui-grid-viewport {
-  overflow: auto;
-}
-
 .report-model .report-left li:last-child {
   background: none;
   border: none;
@@ -4436,6 +4431,10 @@ header.sticky-top {
 .expandableRow .grid {
   height: 100%;
 }
+
+.ui-grid .ui-grid-viewport {
+  overflow: auto;
+}
 /* 
   .expandableRow{
     height: 100% !important;
@@ -4653,9 +4652,27 @@ header.sticky-top {
   }
 }
 
-@media (max-width: 1360px) {
+@media (max-width: 1366px) {
   .network-outer li.network-outer-last {
     position: relative;
+  }
+  .nav-menu>li>a {
+    font-size: 11px;
+    padding: 2px 0;
+  } 
+  .nav-menu>li>a>img {
+    width: 26px;
+  } 
+  .nav-menu>li:first-child div {
+    height: 45px;
+  }  
+  .nav-menu .global-search form > div {
+    width: 100%;
+  }  
+  .nav-menu>li:first-child img {
+    width: 98px;
+    height: 45px;
+    padding: 0;
   }
 }
 
@@ -4663,6 +4680,7 @@ header.sticky-top {
   .nav-menu .right-menu {
     width: 100px;
     border: none;
+    display: flex;
   }
   .search-text-validation-error {
     margin-top: 8px;
@@ -4671,18 +4689,15 @@ header.sticky-top {
   }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1080px) {
   .global-search .search-filter input {
     font-size: 12px;
     line-height: 12px;
+    height: 25px;    
   }
-  .nav-menu .global-search form > div {
-    width: 100%;
-  }
-  .log-out {
-    line-height: 0;
-    padding: 4px 0;
-  }
+  .global-search .search-icon img {
+    top: 0px;
+  }  
   .black-top-menu .left-menu li:first-child {
     margin-right: 10px;
   }
@@ -4721,16 +4736,15 @@ header.sticky-top {
   .network-filter-popup .filter-popup .filter-in-letters a {
     margin: 1px;
   }
-
+  .global-search .search-icon svg {
+    top: 0;
+  }
   .network-page .network-filter {
     margin: 0 10px;
   }
 }
 
 @media (max-width: 992px) {
-  .border-r-desktop {
-    border-right: none;
-  }
   .filter-popup ul li {
     display: flex;
     align-items: center;
@@ -5038,9 +5052,6 @@ header.sticky-top {
   .nav-menu {
     flex-wrap: wrap;
     border: none;
-  }
-  .nav-menu li:first-child {
-    max-width: 100%;
   }
   .nav-menu .global-search {
     padding: 10px;
