--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -993,7 +993,6 @@ header.sticky-top {
   display: flex;
   justify-content: space-between;
   background: #202733;
-  border-top: 2px solid #5c5c5f;
   padding: 2px 10px;
   width: 100%;
 }
@@ -1018,7 +1017,7 @@ header.sticky-top {
 }
 
 .black-top-menu .left-menu li:first-child {
-  margin-right: 15px;
+  margin-right: 5px;
   background: transparent;
   padding-left: 0;
   border: none;
@@ -1039,8 +1038,9 @@ header.sticky-top {
   color: #fff;
 }
 
-.black-top-menu .left-menu li a label {
+.left-menu li a label {
   font-size: 14px;
+  line-height: 16px;
 }
 
 .black-top-menu .left-menu li.active-alert {
@@ -1087,23 +1087,25 @@ header.sticky-top {
 }
 
 .black-top-menu .checkbox-filter li .dropdown-menu a:hover {
-  background: #d4d4d4;
+  background: #EFE4CB;
+}
+
+.black-top-menu .checkbox-filter li .dropdown-menu a{
+  padding: 8px 10px;
+}
+
+.black-top-menu .checkbox-filter li a.dropdown-arrow:after{
+  top: 0;
 }
 
 .filter-listing {
   position: relative;
 }
 
-.filter-listing .dropdown-toggle::after {
-  position: relative;
-  top: 3px;
-  margin-left: 8px;
-}
-
 /*modal*/
 
-.modal.xl-popup .modal-dialog {
-  max-width: 1200px;
+.modal.xl-popup .modal-dialog, .modal-lg, .modal-xl {
+  max-width: 1250px;
   margin: 0 auto;
 }
 
@@ -1267,11 +1269,13 @@ header.sticky-top {
   margin-right: 15px;
   float: left;
   color: #000;
+  font-weight: 600;
 }
 
 .report-tab-section .refresh-report i {
   margin-left: 4px;
   font-size: 16px;
+  color: #00beff;
 }
 
 .report-tab-section .left-menu li {
@@ -4756,6 +4760,9 @@ header.sticky-top {
     display: flex;
     justify-content: space-between;
   }
+  .modal-dialog {
+    margin: 0 15px;
+  }
 }
 
 @media (max-width: 860px) {
@@ -4881,7 +4888,6 @@ header.sticky-top {
 @media (max-width: 767px) {
   .report-tab-section {
     flex-flow: row wrap;
-    justify-content: space-between;
   }
   .modal .btn.btn-gray {
     width: 100%;
