--- a/templates/mainMenu.html
+++ b/templates/mainMenu.html
@@ -17,7 +17,7 @@
         <li class="dropdown show whats-new d-none d-xl-block">
             <a class="dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown"
                 aria-haspopup="true">
-                <img src="assets/images/menuiconblue/menuiconset-6.svg"><label> What's New</label>
+                <img src="assets/images/menuiconblue/menuiconset-6.svg">What's New
                 <div class="notification-new">5</div>
             </a>
             <div class="dropdown-menu common-dropdown" aria-labelledby="dropdownMenuLink">
