--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -2,7 +2,7 @@
     <!-- black-top menu -->
     <div class="black-top-menu" ng-init="showTab('brands')" ng-show="headerDisplay == 1">
         <ul class="left-menu">
-            <li>Welcome {{complete_name}},</li>
+            <li>Hi {{complete_name}},</li>
             <li ng-class="{'active-alert' : type == 'brands'}" id="brand_rank_tab">
                 <a ng-click="showTab('brands')">
                     <label for="">Brands</label>
@@ -16,7 +16,7 @@
         </ul>
         <ul class="checkbox-filter">
             <li class="filter-listing">
-                <a href="" id="chooseList" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" class="dropdown-toggle save-list show-list-option">Choose List</a>
+                <a href="" id="chooseList" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" class="dropdown-arrow save-list show-list-option">Choose List</a>
                 <div class="dropdown-menu"  aria-labelledby="chooseList">
                         <a href="" ng-click="call_brand_tab_list('brand')" class="dropdown-item s">Brands List <i class="fa fa-caret-down fa-lg downarrow-icon"></i></a>
                         <a href="" ng-click="call_brand_tab_list('advertiser')" class="dropdown-item s">Advertisers List <i class="fa fa-caret-down fa-lg downarrow-icon"></i></a>
