--- a/templates/mainMenu.html
+++ b/templates/mainMenu.html
@@ -83,7 +83,7 @@
                 </div>
             </form>
         </li>      
-        <li ng-repeat="item in right_menu" class="d-none d-xl-block {{item.aclass}}">
+        <li ng-repeat="item in right_menu" class="d-none d-xl-block">
             <a title="{{item.title}}" target="{{item.target}}" id="{{item.aid}}"
                 ng-click="menuItemClick(item);">
                 <img ng-src="{{item.src}}" alt="{{item.alt}}">{{item.title}}
