--- a/templates/primary_filter.html
+++ b/templates/primary_filter.html
@@ -97,23 +97,27 @@
         </ul>
     </li>                
     <li class="response-type" ng-init="setResponseTypes('or');">
-        <div class="response-type-text d-flex align-items-center">
-            Response Type -
-            <span class="text-disabled" ng-hide="editable">{{responseTypeText}}</span>
-            <ul ng-show="editable">
-                <li class="radio-circular"  ng-class="{'active-alert' : response_header == 'or'}">
-                    <input type="radio" id="or" name="response_typ" value=" or " ng-model="response_header" class="radio-custom" ng-click="setResponseTypes('or')"/>
-                    <label class="radio-custom-label" for="or">
-                        At Least
-                    </label>
-                </li>
-                <li class="radio-circular" ng-class="{'active-alert' : response_header == 'and'}">
-                    <input type="radio" id="and" name="response_typ" value=" and " ng-model="response_header" class="radio-custom" ng-click="setResponseTypes('and')" />
-                    <label class="radio-custom-label" for="and">
-                        Only
-                    </label>
-                </li>
-            </ul>
+        <div class="response-type-text" ng-class="{'response-type-details' : !editable}">
+           <div class="filter-view response-filter">
+              Response Type -
+              <ul ng-show="editable">
+                  <li class="radio-circular"  ng-class="{'active-alert' : response_header == 'or'}">
+                      <input type="radio" id="or" name="response_typ" value=" or " ng-model="response_header" class="radio-custom" ng-click="setResponseTypes('or')"/>
+                      <label class="radio-custom-label" for="or">
+                          At Least
+                      </label>
+                  </li>
+                  <li class="radio-circular" ng-class="{'active-alert' : response_header == 'and'}">
+                      <input type="radio" id="and" name="response_typ" value=" and " ng-model="response_header" class="radio-custom" ng-click="setResponseTypes('and')" />
+                      <label class="radio-custom-label" for="and">
+                          Only
+                      </label>
+                  </li>
+              </ul>
+           </div>
+           <div class="response-type-text editable-content">
+              <span class="text-disabled">{{responseTypeText}}</span>
+           </div>
         </div>
 
         <ul class="response-menu" ng-show="editable">
@@ -128,7 +132,7 @@
         <button class="btn btn-blue show-div edit btn-sm" ng-click="editableContent();" ng-hide="editable"><i class="fa fa-pencil" title="edit"></i>Edit</button>
         <button class="btn btn-blue apply btn-sm"  ng-click="applyFilter()"><i class="fa fa-check" title="apply"></i>Apply</button>
         <button class="btn btn-blue reset btn-sm"  ng-click="cancelFilter()"  ng-show="editable"><i class="fa fa-rotate-right" title="reset"></i>Reset</button>
-        <button class="btn btn-blue hide-div cancel btn-sm" ng-show="editable" ng-click="cancelFilter()"><i class="fa fa-times" title="cancel"></i>Cancel</button>                            
+        <button class="btn btn-black hide-div cancel btn-sm" ng-show="editable" ng-click="cancelFilter()"><i class="fa fa-times" title="cancel"></i>Cancel</button>                            
     </li>
 </ul>
 <!-- Other date range popup -->
